Added images for the website

--- a/index.html
+++ b/index.html
@@ -49,14 +49,20 @@
     
   <!--#region Main -->
   <main>
-    <section id="hero">
-      <h1>Welcome to Your Website</h1>
-      <p>This is a brief introduction.</p>
+    <section id="hero" class="hero-bg">
+      <div>
+        <h1>Welcome to Your Website</h1>
+        <p>This is a brief introduction.</p>
+      </div>
+      <!-- <img class="hero-bg" src="./img/banner.webp" alt="Hero Background" /> -->
     </section>
 
-    <section id="content">
-      <h2>Your Content Here</h2>
-      <p>Details about your content go here.</p>
+    <section id="content" class="v-flex">
+      <div>
+        <h2>Your Content Here</h2>
+        <p>Details about your content go here.</p>
+      </div>
+      <img class="section-img" src="./img/woman-drinking.webp" alt="" />
     </section>
   </main>
   <!--#endregion Main -->
